# Freelancer-Flow

./: package-lock.json
backend/: .env.development  .gitignore  db.sqlite3  requirements.txt
backend/api/: models.py  serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/clients/: models.py  serializers.py  urls.py  views.py
backend/payments/: models.py  serializers.py  urls.py  utils.py  views.py
backend/projects/: admin.py  models.py  serializers.py  urls.py  views.py
client/: config.ts  package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vitest.config.ts
server/: pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 6e49864ff155_init_async_db.py  8d136ab8ca68_reset_migrations.py  aa4f87d428e8_add_nullable_true_to_the_field_that_.py  ca0ccf3853b6_removed_user_and_time_entries_relations.py
server/app/: config.py  main.py
server/app/api/v1/: api.py
server/app/api/v1/endpoints/: auth.py  clients.py  projects.py  time_entries.py
server/app/core/: config.py  security.py
server/app/db/: database.py
server/app/models/: Client.py  Milestone.py  Project.py  RefreshToken.py  TimeEntry.py  User.py  __init__.py
server/app/schemas/: AuthSchema.py  Base.py  ClientsSchema.py  ProjectsSchema.py  TimeEntrySchema.py
server/app/utils/crud/: auth.py  clients.py  projects.py  time_entries.py
server/app/utils/dependencies/: auth.py
(+296 files in other folders)
