[project]
name = "server"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "cryptography==48.0.0",
    "email-validator==2.3.0",
    "fastapi==0.136.3",
    "fastapi-cli==0.0.24",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "pwdlib[argon2]==0.3.0",
    "pydantic==2.13.4",
    "pydantic-extra-types==2.11.1",
    "pydantic-settings==2.14.1",
    "pyjwt==2.13.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.29",
    "pyyaml==6.0.3",
    "sentry-sdk==2.60.0",
    "sqlalchemy==2.0.50",
    "uvicorn[standard]==0.48.0",
    "websockets==16.0",
]
